<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<com.example.xx.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.xx.TitleLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstEditText1"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/firstEditText2"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickLoginListener1"
            android:layout_weight="1"
            android:text="@string/firstButtontext1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        
            android:onClick="onClickLoginListener2"
            android:layout_weight="1"
            android:text="@string/firstButtontext2" />
        
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        
            android:onClick="onClickLoginListener3"
            android:layout_weight="1"
            android:text="@string/firstButtontext3" />
    </LinearLayout>

</RelativeLayout>